fix: copy of dataframe generated in cleaning

--- a/projects/valorant_stats/notebooks/cleaning.ipynb
+++ b/projects/valorant_stats/notebooks/cleaning.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 42,
       "metadata": {
         "id": "7B4RWNoUdjpJ"
       },
@@ -51,13 +51,13 @@
         "drive.mount('/content/drive', force_remount=True)"
       ],
       "metadata": {
-        "id": "i_0m5901eCKp",
-        "outputId": "4df00311-5101-4c65-8f13-43fc6738b720",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "i_0m5901eCKp",
+        "outputId": "3a187122-853b-4d2e-eb41-4ab5f0e53a70"
       },
-      "execution_count": 32,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "fgjIAQpgeTe4"
       },
-      "execution_count": 33,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "oOcWW65oiqMv"
       },
-      "execution_count": 34,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -135,14 +135,14 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "WIk3o7r7e0Rm",
-        "outputId": "3bde39dd-2cca-46ca-df89-14341ba1313c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 270
-        }
+        },
+        "id": "WIk3o7r7e0Rm",
+        "outputId": "1f9f7be0-4682-4669-9bec-603be8dd2ad0"
       },
-      "execution_count": 35,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9d44c9ae-69cf-4702-ad98-a493fa988fe3\">\n",
+              "  <div id=\"df-9f39ba82-c8ac-45c9-9d46-77138f42a0ba\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -461,7 +461,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9d44c9ae-69cf-4702-ad98-a493fa988fe3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9f39ba82-c8ac-45c9-9d46-77138f42a0ba')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -512,12 +512,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9d44c9ae-69cf-4702-ad98-a493fa988fe3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9f39ba82-c8ac-45c9-9d46-77138f42a0ba button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9d44c9ae-69cf-4702-ad98-a493fa988fe3');\n",
+              "          const element = document.querySelector('#df-9f39ba82-c8ac-45c9-9d46-77138f42a0ba');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -540,7 +540,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 46
         }
       ]
     },
@@ -559,13 +559,13 @@
         "df.columns"
       ],
       "metadata": {
-        "id": "K8-1Io-UmR2A",
-        "outputId": "b637b782-1da8-4941-f13b-42081e2c5328",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "K8-1Io-UmR2A",
+        "outputId": "d1eca9ec-b22b-4682-f789-c459f7be113b"
       },
-      "execution_count": 36,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -582,7 +582,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 47
         }
       ]
     },
@@ -603,14 +603,14 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "5kLuD0Azi8NV",
-        "outputId": "d6f5f6e5-3c05-47c5-9126-540fe249e18a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "5kLuD0Azi8NV",
+        "outputId": "602522c5-b8df-451a-d444-3aa98dba23d8"
       },
-      "execution_count": 37,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,7 +639,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4a1c310c-ab97-41e4-9d4e-4056601a3a35\">\n",
+              "  <div id=\"df-90332bae-65a4-4ae9-b2f4-ff53a9b129fe\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -776,7 +776,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4a1c310c-ab97-41e4-9d4e-4056601a3a35')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-90332bae-65a4-4ae9-b2f4-ff53a9b129fe')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -827,12 +827,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4a1c310c-ab97-41e4-9d4e-4056601a3a35 button.colab-df-convert');\n",
+              "          document.querySelector('#df-90332bae-65a4-4ae9-b2f4-ff53a9b129fe button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4a1c310c-ab97-41e4-9d4e-4056601a3a35');\n",
+              "          const element = document.querySelector('#df-90332bae-65a4-4ae9-b2f4-ff53a9b129fe');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -855,7 +855,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 48
         }
       ]
     },
@@ -880,16 +880,18 @@
     {
       "cell_type": "code",
       "source": [
-        "df.info()"
+        "df_cleaned = df.copy()\n",
+        "\n",
+        "df_cleaned.info()"
       ],
       "metadata": {
-        "id": "oyJ_V1WumUsz",
-        "outputId": "6419c818-89a5-4179-b54d-31f22f21f44e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oyJ_V1WumUsz",
+        "outputId": "441d54be-2291-413b-8767-c8d028131609"
       },
-      "execution_count": 38,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -934,17 +936,17 @@
     {
       "cell_type": "code",
       "source": [
-        "df = df[df['name'].notna()]\n",
-        "df.info()"
+        "df_cleaned = df_cleaned[df_cleaned['name'].notna()]\n",
+        "df_cleaned.info()"
       ],
       "metadata": {
-        "id": "_mN687t0mlch",
-        "outputId": "a0c9dfa4-8389-4e7d-e703-27dbca8edc96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_mN687t0mlch",
+        "outputId": "ef1e5205-1a3d-48e9-e737-cbb666eb398b"
       },
-      "execution_count": 39,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -989,19 +991,19 @@
     {
       "cell_type": "code",
       "source": [
-        "df['headshots'] = pd.to_numeric(df['first_bloods'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
-        "df['first_bloods'] = pd.to_numeric(df['first_bloods'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
-        "df['assists'] = pd.to_numeric(df['assists'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
-        "df.info()"
+        "df_cleaned['headshots'] = pd.to_numeric(df_cleaned['first_bloods'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
+        "df_cleaned['first_bloods'] = pd.to_numeric(df_cleaned['first_bloods'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
+        "df_cleaned['assists'] = pd.to_numeric(df_cleaned['assists'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
+        "df_cleaned.info()"
       ],
       "metadata": {
-        "id": "Lvhqw_LgnFUr",
-        "outputId": "588e6b63-a371-413e-82d9-72d2613b3f05",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Lvhqw_LgnFUr",
+        "outputId": "293b0f84-ca30-45a2-d5e1-5f8bc9fbfc68"
       },
-      "execution_count": 40,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -1031,18 +1033,6 @@
             "dtypes: float64(9), int64(3), object(4)\n",
             "memory usage: 11.1+ MB\n"
           ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
-          ]
         }
       ]
     },
@@ -1067,12 +1057,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df.to_csv('/content/drive/MyDrive/UP/Ciência de Dados/Notebooks/data/dataset_clean.csv', index=False, sep=';')"
+        "df_cleaned.to_csv('/content/drive/MyDrive/UP/Ciência de Dados/Notebooks/data/dataset_clean.csv', index=False, sep=';')"
       ],
       "metadata": {
         "id": "nJ-KfGOgoDoY"
       },
-      "execution_count": 41,
+      "execution_count": 52,
       "outputs": []
     }
   ],
