--- a/projects/valorant_stats/notebooks/cleaning.ipynb
+++ b/projects/valorant_stats/notebooks/cleaning.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 81,
       "metadata": {
         "id": "7B4RWNoUdjpJ"
       },
@@ -55,9 +55,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i_0m5901eCKp",
-        "outputId": "fdd7f612-c73c-4901-ad4c-808fcbd61764"
+        "outputId": "dde79f3b-1c42-4403-ef90-ca1aeca0098b"
       },
-      "execution_count": 41,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "fgjIAQpgeTe4"
       },
-      "execution_count": 42,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "oOcWW65oiqMv"
       },
-      "execution_count": 43,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -140,9 +140,9 @@
           "height": 270
         },
         "id": "WIk3o7r7e0Rm",
-        "outputId": "c9252216-8863-46c6-af0b-0f62860da83b"
+        "outputId": "e10fd761-bbaf-486d-da56-2ac9e0528864"
       },
-      "execution_count": 44,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a719e9bd-1f2f-4af4-afbd-6415cd78f09a\">\n",
+              "  <div id=\"df-20616d57-fd6a-4942-85f3-ac59ab3b5394\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -461,7 +461,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a719e9bd-1f2f-4af4-afbd-6415cd78f09a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-20616d57-fd6a-4942-85f3-ac59ab3b5394')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -512,12 +512,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a719e9bd-1f2f-4af4-afbd-6415cd78f09a button.colab-df-convert');\n",
+              "          document.querySelector('#df-20616d57-fd6a-4942-85f3-ac59ab3b5394 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a719e9bd-1f2f-4af4-afbd-6415cd78f09a');\n",
+              "          const element = document.querySelector('#df-20616d57-fd6a-4942-85f3-ac59ab3b5394');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -540,7 +540,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 85
         }
       ]
     },
@@ -572,9 +572,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K8-1Io-UmR2A",
-        "outputId": "43828604-397e-45ce-ba98-1daa4b85a6ec"
+        "outputId": "8b6a0bcd-3b82-46c7-e504-a31df6ca10e3"
       },
-      "execution_count": 45,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 86
         }
       ]
     },
@@ -612,7 +612,7 @@
       "metadata": {
         "id": "sOdfXR-wy10s"
       },
-      "execution_count": 46,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -634,24 +634,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 206
         },
         "id": "5kLuD0Azi8NV",
-        "outputId": "a7d749d8-7de2-4245-dc50-1eae537748e5"
+        "outputId": "6009ed8e-341f-4f4f-a17f-e425448c1453"
       },
-      "execution_count": 47,
+      "execution_count": 88,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py:4913: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  errors=errors,\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -679,7 +668,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0ea7bde4-cca4-4e8b-b67a-6101c574380b\">\n",
+              "  <div id=\"df-90602870-bdff-4a9e-ae8f-de4dc503de01\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -816,7 +805,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0ea7bde4-cca4-4e8b-b67a-6101c574380b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-90602870-bdff-4a9e-ae8f-de4dc503de01')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -867,12 +856,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0ea7bde4-cca4-4e8b-b67a-6101c574380b button.colab-df-convert');\n",
+              "          document.querySelector('#df-90602870-bdff-4a9e-ae8f-de4dc503de01 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0ea7bde4-cca4-4e8b-b67a-6101c574380b');\n",
+              "          const element = document.querySelector('#df-90602870-bdff-4a9e-ae8f-de4dc503de01');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -895,7 +884,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 88
         }
       ]
     },
@@ -929,9 +918,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oyJ_V1WumUsz",
-        "outputId": "76f35aa6-b431-4d36-9740-e34a17bd0467"
+        "outputId": "55d87e90-65a1-4e57-fcb8-6f12f8402eaf"
       },
-      "execution_count": 48,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
@@ -998,9 +987,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_mN687t0mlch",
-        "outputId": "95cc9007-4051-4d72-ea88-cfaa43ffdffa"
+        "outputId": "60022326-c602-4407-f2d1-c28db58854a9"
       },
-      "execution_count": 49,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
@@ -1048,6 +1037,7 @@
         "df_cleaned['headshots'] = pd.to_numeric(df_cleaned['first_bloods'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
         "df_cleaned['first_bloods'] = pd.to_numeric(df_cleaned['first_bloods'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
         "df_cleaned['assists'] = pd.to_numeric(df_cleaned['assists'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
+        "df_cleaned = df_cleaned[df_cleaned['win_percent'] < 80]\n",
         "df_cleaned.info()"
       ],
       "metadata": {
@@ -1055,35 +1045,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lvhqw_LgnFUr",
-        "outputId": "412b2c49-b431-4fc5-9b77-1f7689cccf21"
+        "outputId": "58b76c0b-51fc-4218-f900-112629ea681c"
       },
-      "execution_count": 50,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "Int64Index: 24423 entries, 0 to 85677\n",
+            "Int64Index: 24384 entries, 0 to 85677\n",
             "Data columns (total 16 columns):\n",
             " #   Column            Non-Null Count  Dtype  \n",
             "---  ------            --------------  -----  \n",
-            " 0   name              24423 non-null  object \n",
-            " 1   rating            24423 non-null  object \n",
-            " 2   damage_round      24423 non-null  float64\n",
-            " 3   headshots         24423 non-null  float64\n",
-            " 4   headshot_percent  24423 non-null  float64\n",
-            " 5   aces              24423 non-null  int64  \n",
-            " 6   clutches          24423 non-null  int64  \n",
-            " 7   flawless          24423 non-null  int64  \n",
-            " 8   first_bloods      24423 non-null  float64\n",
-            " 9   assists           24423 non-null  float64\n",
-            " 10  kd_ratio          24423 non-null  float64\n",
-            " 11  kills_round       24423 non-null  float64\n",
-            " 12  score_round       24423 non-null  float64\n",
-            " 13  win_percent       24423 non-null  float64\n",
-            " 14  agent_1           24423 non-null  object \n",
-            " 15  gun1_name         24423 non-null  object \n",
+            " 0   name              24384 non-null  object \n",
+            " 1   rating            24384 non-null  object \n",
+            " 2   damage_round      24384 non-null  float64\n",
+            " 3   headshots         24384 non-null  float64\n",
+            " 4   headshot_percent  24384 non-null  float64\n",
+            " 5   aces              24384 non-null  int64  \n",
+            " 6   clutches          24384 non-null  int64  \n",
+            " 7   flawless          24384 non-null  int64  \n",
+            " 8   first_bloods      24384 non-null  float64\n",
+            " 9   assists           24384 non-null  float64\n",
+            " 10  kd_ratio          24384 non-null  float64\n",
+            " 11  kills_round       24384 non-null  float64\n",
+            " 12  score_round       24384 non-null  float64\n",
+            " 13  win_percent       24384 non-null  float64\n",
+            " 14  agent_1           24384 non-null  object \n",
+            " 15  gun1_name         24384 non-null  object \n",
             "dtypes: float64(9), int64(3), object(4)\n",
             "memory usage: 3.2+ MB\n"
           ]
@@ -1096,13 +1086,13 @@
         "df_cleaned['rating'].unique()"
       ],
       "metadata": {
-        "id": "FXR4DORqjIPn",
-        "outputId": "c702c880-e1c7-45c1-97a4-8642d2870bc2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FXR4DORqjIPn",
+        "outputId": "3003c84e-3765-4a62-c0db-5f8bd7a77899"
       },
-      "execution_count": 51,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,7 +1104,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 92
         }
       ]
     },
@@ -1140,14 +1130,56 @@
         "df_cleaned['rating'].unique()"
       ],
       "metadata": {
-        "id": "Bpfs2CbnjaNP",
-        "outputId": "2430c7fa-2141-47fc-c2d2-cb230f921e1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Bpfs2CbnjaNP",
+        "outputId": "d9e439e5-9d82-44cb-ca07-8cedcb51d0ed"
       },
-      "execution_count": 52,
+      "execution_count": 93,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  after removing the cwd from sys.path.\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \"\"\"\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1157,7 +1189,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 93
         }
       ]
     },
@@ -1187,7 +1219,7 @@
       "metadata": {
         "id": "nJ-KfGOgoDoY"
       },
-      "execution_count": 53,
+      "execution_count": 94,
       "outputs": []
     }
   ],
