--- a/projects/valorant_stats/notebooks/cleaning.ipynb
+++ b/projects/valorant_stats/notebooks/cleaning.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 95,
       "metadata": {
         "id": "7B4RWNoUdjpJ"
       },
@@ -55,9 +55,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i_0m5901eCKp",
-        "outputId": "dde79f3b-1c42-4403-ef90-ca1aeca0098b"
+        "outputId": "63bc8e70-fe11-45c7-bcba-01bfd27d819c"
       },
-      "execution_count": 82,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "fgjIAQpgeTe4"
       },
-      "execution_count": 83,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "oOcWW65oiqMv"
       },
-      "execution_count": 84,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -140,9 +140,9 @@
           "height": 270
         },
         "id": "WIk3o7r7e0Rm",
-        "outputId": "e10fd761-bbaf-486d-da56-2ac9e0528864"
+        "outputId": "529cea93-6fc9-4444-ae57-af9a4ce6a2ef"
       },
-      "execution_count": 85,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-20616d57-fd6a-4942-85f3-ac59ab3b5394\">\n",
+              "  <div id=\"df-71de727a-1440-4473-9c13-409da30f024c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -461,7 +461,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-20616d57-fd6a-4942-85f3-ac59ab3b5394')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-71de727a-1440-4473-9c13-409da30f024c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -512,12 +512,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-20616d57-fd6a-4942-85f3-ac59ab3b5394 button.colab-df-convert');\n",
+              "          document.querySelector('#df-71de727a-1440-4473-9c13-409da30f024c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-20616d57-fd6a-4942-85f3-ac59ab3b5394');\n",
+              "          const element = document.querySelector('#df-71de727a-1440-4473-9c13-409da30f024c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -540,7 +540,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 85
+          "execution_count": 99
         }
       ]
     },
@@ -572,9 +572,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K8-1Io-UmR2A",
-        "outputId": "8b6a0bcd-3b82-46c7-e504-a31df6ca10e3"
+        "outputId": "0f1e33ee-9758-4f09-c556-3a4719dc1ce3"
       },
-      "execution_count": 86,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 100
         }
       ]
     },
@@ -612,7 +612,7 @@
       "metadata": {
         "id": "sOdfXR-wy10s"
       },
-      "execution_count": 87,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -634,13 +634,24 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "5kLuD0Azi8NV",
-        "outputId": "6009ed8e-341f-4f4f-a17f-e425448c1453"
+        "outputId": "8740a92e-3a68-4fcf-8ff4-d358dd2fecbb"
       },
-      "execution_count": 88,
+      "execution_count": 102,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py:4913: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  errors=errors,\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -668,7 +679,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-90602870-bdff-4a9e-ae8f-de4dc503de01\">\n",
+              "  <div id=\"df-adbb9033-5c65-429c-978b-f4771097be06\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -805,7 +816,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-90602870-bdff-4a9e-ae8f-de4dc503de01')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-adbb9033-5c65-429c-978b-f4771097be06')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -856,12 +867,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-90602870-bdff-4a9e-ae8f-de4dc503de01 button.colab-df-convert');\n",
+              "          document.querySelector('#df-adbb9033-5c65-429c-978b-f4771097be06 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-90602870-bdff-4a9e-ae8f-de4dc503de01');\n",
+              "          const element = document.querySelector('#df-adbb9033-5c65-429c-978b-f4771097be06');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -884,7 +895,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 88
+          "execution_count": 102
         }
       ]
     },
@@ -918,9 +929,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oyJ_V1WumUsz",
-        "outputId": "55d87e90-65a1-4e57-fcb8-6f12f8402eaf"
+        "outputId": "98c90f26-9046-49e2-b3c6-efdc017abfcc"
       },
-      "execution_count": 89,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,9 +998,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_mN687t0mlch",
-        "outputId": "60022326-c602-4407-f2d1-c28db58854a9"
+        "outputId": "101ce733-9a1e-45f0-90ed-7050ca7ef1bd"
       },
-      "execution_count": 90,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,7 +1036,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Notamos também que existem algumas colunas que apresentam apenas números mas estão no formato errado, então fazemos a conversão."
+        "Notamos também que existem algumas colunas que apresentam apenas números mas estão no formato errado, então fazemos a conversão. Também aproveitamos para remover jogadores que estão com porcentagem de vitória muito alta e baixa, pois provavelmente não estão nos elos/ranques adequados, ainda podem subir ou cair muito por estar com essa porcentagem."
       ],
       "metadata": {
         "id": "0Z9H7qUBnzHK"
@@ -1038,6 +1049,7 @@
         "df_cleaned['first_bloods'] = pd.to_numeric(df_cleaned['first_bloods'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
         "df_cleaned['assists'] = pd.to_numeric(df_cleaned['assists'].str.replace(\",\",\".\"), errors=\"coerce\")\n",
         "df_cleaned = df_cleaned[df_cleaned['win_percent'] < 80]\n",
+        "df_cleaned = df_cleaned[df_cleaned['win_percent'] > 40]\n",
         "df_cleaned.info()"
       ],
       "metadata": {
@@ -1045,35 +1057,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lvhqw_LgnFUr",
-        "outputId": "58b76c0b-51fc-4218-f900-112629ea681c"
+        "outputId": "6b325f50-6832-4a96-f996-c701c68efa44"
       },
-      "execution_count": 91,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "Int64Index: 24384 entries, 0 to 85677\n",
+            "Int64Index: 24301 entries, 0 to 85677\n",
             "Data columns (total 16 columns):\n",
             " #   Column            Non-Null Count  Dtype  \n",
             "---  ------            --------------  -----  \n",
-            " 0   name              24384 non-null  object \n",
-            " 1   rating            24384 non-null  object \n",
-            " 2   damage_round      24384 non-null  float64\n",
-            " 3   headshots         24384 non-null  float64\n",
-            " 4   headshot_percent  24384 non-null  float64\n",
-            " 5   aces              24384 non-null  int64  \n",
-            " 6   clutches          24384 non-null  int64  \n",
-            " 7   flawless          24384 non-null  int64  \n",
-            " 8   first_bloods      24384 non-null  float64\n",
-            " 9   assists           24384 non-null  float64\n",
-            " 10  kd_ratio          24384 non-null  float64\n",
-            " 11  kills_round       24384 non-null  float64\n",
-            " 12  score_round       24384 non-null  float64\n",
-            " 13  win_percent       24384 non-null  float64\n",
-            " 14  agent_1           24384 non-null  object \n",
-            " 15  gun1_name         24384 non-null  object \n",
+            " 0   name              24301 non-null  object \n",
+            " 1   rating            24301 non-null  object \n",
+            " 2   damage_round      24301 non-null  float64\n",
+            " 3   headshots         24301 non-null  float64\n",
+            " 4   headshot_percent  24301 non-null  float64\n",
+            " 5   aces              24301 non-null  int64  \n",
+            " 6   clutches          24301 non-null  int64  \n",
+            " 7   flawless          24301 non-null  int64  \n",
+            " 8   first_bloods      24301 non-null  float64\n",
+            " 9   assists           24301 non-null  float64\n",
+            " 10  kd_ratio          24301 non-null  float64\n",
+            " 11  kills_round       24301 non-null  float64\n",
+            " 12  score_round       24301 non-null  float64\n",
+            " 13  win_percent       24301 non-null  float64\n",
+            " 14  agent_1           24301 non-null  object \n",
+            " 15  gun1_name         24301 non-null  object \n",
             "dtypes: float64(9), int64(3), object(4)\n",
             "memory usage: 3.2+ MB\n"
           ]
@@ -1090,9 +1102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FXR4DORqjIPn",
-        "outputId": "3003c84e-3765-4a62-c0db-5f8bd7a77899"
+        "outputId": "4e501e49-78eb-4614-881f-edd2e793aabb"
       },
-      "execution_count": 92,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1104,7 +1116,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 106
         }
       ]
     },
@@ -1134,52 +1146,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bpfs2CbnjaNP",
-        "outputId": "d9e439e5-9d82-44cb-ca07-8cedcb51d0ed"
+        "outputId": "f3d626d8-a738-4855-ea3c-e377bf0554f3"
       },
-      "execution_count": 93,
+      "execution_count": 107,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  after removing the cwd from sys.path.\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1189,7 +1159,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 107
         }
       ]
     },
@@ -1219,7 +1189,7 @@
       "metadata": {
         "id": "nJ-KfGOgoDoY"
       },
-      "execution_count": 94,
+      "execution_count": 108,
       "outputs": []
     }
   ],
