fix: dataset clean updated

--- a/projects/valorant_stats/notebooks/cleaning.ipynb
+++ b/projects/valorant_stats/notebooks/cleaning.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 123,
       "metadata": {
         "id": "7B4RWNoUdjpJ"
       },
@@ -55,9 +55,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i_0m5901eCKp",
-        "outputId": "1822c9e6-eb95-495b-b4b5-06af97508da2"
+        "outputId": "c7f4f0b5-8f04-487f-d74f-d7bd51360bbc"
       },
-      "execution_count": 110,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "fgjIAQpgeTe4"
       },
-      "execution_count": 111,
+      "execution_count": 125,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "oOcWW65oiqMv"
       },
-      "execution_count": 112,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -140,9 +140,9 @@
           "height": 270
         },
         "id": "WIk3o7r7e0Rm",
-        "outputId": "2a4b6415-ca7e-4908-bf0e-33dc375fabf2"
+        "outputId": "c59194ef-41f0-4954-a1fd-77acb59f37f8"
       },
-      "execution_count": 113,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2d466010-e17a-4679-ac5d-afbba94a7eda\">\n",
+              "  <div id=\"df-d59ebeae-f95e-4bd9-8b78-684a225324cf\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -461,7 +461,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2d466010-e17a-4679-ac5d-afbba94a7eda')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d59ebeae-f95e-4bd9-8b78-684a225324cf')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -512,12 +512,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2d466010-e17a-4679-ac5d-afbba94a7eda button.colab-df-convert');\n",
+              "          document.querySelector('#df-d59ebeae-f95e-4bd9-8b78-684a225324cf button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2d466010-e17a-4679-ac5d-afbba94a7eda');\n",
+              "          const element = document.querySelector('#df-d59ebeae-f95e-4bd9-8b78-684a225324cf');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -540,7 +540,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 113
+          "execution_count": 127
         }
       ]
     },
@@ -572,9 +572,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K8-1Io-UmR2A",
-        "outputId": "df734637-bcc0-4ff0-fa95-f6937fba65e5"
+        "outputId": "76145e36-23b1-4835-8615-fd516c52990f"
       },
-      "execution_count": 114,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 114
+          "execution_count": 128
         }
       ]
     },
@@ -612,7 +612,7 @@
       "metadata": {
         "id": "sOdfXR-wy10s"
       },
-      "execution_count": 115,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -634,13 +634,24 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "5kLuD0Azi8NV",
-        "outputId": "6aa713c9-3361-46bb-c262-3279b4bec7d8"
+        "outputId": "bb83cf10-078e-447d-9420-3de859a257ca"
       },
-      "execution_count": 116,
+      "execution_count": 130,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py:4913: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  errors=errors,\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -668,7 +679,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-32592f8a-827e-4eab-b521-7513f38b6867\">\n",
+              "  <div id=\"df-725a5f12-6e07-4c2c-b4e5-9b9ed65ff45f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -805,7 +816,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-32592f8a-827e-4eab-b521-7513f38b6867')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-725a5f12-6e07-4c2c-b4e5-9b9ed65ff45f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -856,12 +867,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-32592f8a-827e-4eab-b521-7513f38b6867 button.colab-df-convert');\n",
+              "          document.querySelector('#df-725a5f12-6e07-4c2c-b4e5-9b9ed65ff45f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-32592f8a-827e-4eab-b521-7513f38b6867');\n",
+              "          const element = document.querySelector('#df-725a5f12-6e07-4c2c-b4e5-9b9ed65ff45f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -884,7 +895,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 116
+          "execution_count": 130
         }
       ]
     },
@@ -918,9 +929,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oyJ_V1WumUsz",
-        "outputId": "33069dc1-1e24-46d5-ca4e-c13a2ffaba35"
+        "outputId": "ebc2619f-5d4c-49f7-fd9f-9a59f02e2be7"
       },
-      "execution_count": 117,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,9 +998,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_mN687t0mlch",
-        "outputId": "9a4e5780-0648-4b13-8ea8-9fef63bbcfad"
+        "outputId": "c9dc5beb-51b5-44e9-aa87-63906ff61e48"
       },
-      "execution_count": 118,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,9 +1057,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lvhqw_LgnFUr",
-        "outputId": "36e76bb7-92b6-4089-8e1f-baad3b868c60"
+        "outputId": "f59011b7-5262-45cc-96d2-5161aed29022"
       },
-      "execution_count": 119,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
@@ -1091,9 +1102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FXR4DORqjIPn",
-        "outputId": "0a37a32e-be47-4765-9f46-5293413a21fc"
+        "outputId": "49865a19-d737-49a6-849c-7c2771828b9a"
       },
-      "execution_count": 120,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1106,7 +1117,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 120
+          "execution_count": 134
         }
       ]
     },
@@ -1122,12 +1133,14 @@
     {
       "cell_type": "code",
       "source": [
+        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'Immortal 3', 'Radiant', regex=True)\n",
+        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'Immortal 1', 'Diamond -', regex=True)\n",
         "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Immortal.*', 'Immortal', regex=True)\n",
-        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Diamond.*', 'Diamond', regex=True)\n",
-        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Platinum.*', 'Platinum', regex=True)\n",
-        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Gold.*', 'Gold', regex=True)\n",
-        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Silver.*', 'Silver', regex=True)\n",
-        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Bronze.*', 'Bronze', regex=True)\n",
+        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Diamond.*', 'Diamond -', regex=True)\n",
+        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Platinum.*', 'Diamond -', regex=True)\n",
+        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Gold.*', 'Diamond -', regex=True)\n",
+        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Silver.*', 'Diamond -', regex=True)\n",
+        "df_cleaned['rating'] = df_cleaned['rating'].str.replace(r'^Bronze.*', 'Diamond -', regex=True)\n",
         "\n",
         "df_cleaned['rating'].unique()"
       ],
@@ -1136,20 +1149,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bpfs2CbnjaNP",
-        "outputId": "b1cf551a-2ad5-4919-c809-3004cb37aab9"
+        "outputId": "48b17781-1ce3-46ae-9691-1b4b08a33cde"
       },
-      "execution_count": 121,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array(['Radiant', 'Immortal', 'Diamond', 'Gold', 'Silver', 'Platinum',\n",
-              "       'Bronze'], dtype=object)"
+              "array(['Radiant', 'Immortal', 'Diamond -'], dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 121
+          "execution_count": 135
         }
       ]
     },
@@ -1179,7 +1191,7 @@
       "metadata": {
         "id": "nJ-KfGOgoDoY"
       },
-      "execution_count": 122,
+      "execution_count": 136,
       "outputs": []
     }
   ],
